feat: added withdraw http handler to the api
